--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
+    "@octokit/webhooks-definitions": "^3.67.3",
+    "@types/node-fetch": "^2.6.2",
+    "node-fetch": "^2.6.9"
   },
   "devDependencies": {
     "@types/node": "^18.11.0",
