--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,28 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'release-automation-action'
+description: 'GitHub action for release automation'
+author: 'Airen Kang'
 inputs:
-  milliseconds: # change this
+  gh_token:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'Input GitHub access token here'
+  circleci_token:
+    required: true
+    description: 'Input CircleCI API token here'
+  platform:
+    required: true
+    description: 'Input SDK platform here, e.g. ios, android, js, rn, flutter'
+  product:
+    required: true
+    description: 'Input SDK product here, e.g. chat, calls, uikit, live, live_uikit'
+  framework:
+    required: false
+    description: 'Input SDK framework here, e.g. react'
+  product_jira_project_key:
+    required: true
+    description: 'Input product jira project key here, e.g. CORE, UIKIT, CALLS, PLATFORMX'
+  product_jira_version_prefix:
+    required: true
+    description: 'Input product jira release version prefix here, e.g. ios_core, rn_uikit, js_uikit'
 runs:
   using: 'node16'
   main: 'dist/index.js'
