--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "main": "lib/main.js",
   "dependencies": {
     "@actions/core": "^1.10.0",
+    "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
     "@octokit/webhooks-definitions": "^3.67.3",
     "@types/node-fetch": "^2.6.2",
