--- a/.github/workflows/pr-comment.yaml
+++ b/.github/workflows/pr-comment.yaml
@@ -11,3 +11,7 @@ jobs:
         with:
           gh_token: ${{ secrets.GITHUB_TOKEN }}
           circleci_token: ${{ secrets.CIRCLECI_TOKEN }}
+          product: 'uikit'
+          platform: 'rn'
+          product_jira_project_key: 'UIKIT'
+          product_jira_version_prefix: 'rn_uikit'
