--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -29,12 +29,11 @@ jobs:
           node-version: 16.x
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --immutable
 
       - name: Rebuild the dist/ directory
         run: |
-          npm run build
-          npm run package
+          yarn build
 
       - name: Compare the expected and actual dist/ directories
         run: |
