--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - run: |
+          git checkout -b release/${{ github.event.inputs.version }}
+          git push origin release/${{ github.event.inputs.version }}
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
@@ -32,3 +35,8 @@ jobs:
         run: git tag -f latest ${{ github.event.inputs.version }}
       - name: Push new tag
         run: git push origin latest --force
+      - name: 'create a pull request'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh pr create --title "chore(release): publish ${{ github.event.inputs.version }}" --body "created by automation"
