--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0
       - run: |
           git checkout -b release/${{ github.event.inputs.version }}
-          git push origin release/${{ github.event.inputs.version }}
+          git push --set-upstream origin release/${{ github.event.inputs.version }}
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
