--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set Node.js 16.x
-        uses: actions/setup-node@v3.5.1
+      - uses: actions/setup-node@v4
         with:
-          node-version: 16.x
+          node-version: 18
 
       - run: |
           yarn install
@@ -24,7 +23,7 @@ jobs:
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: ./
         with:
           gh_token: ${{ secrets.GITHUB_TOKEN }}
