--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "build:action": "ncc build --source-map --license licenses.txt",
     "format": "prettier --write '**/**.ts'",
     "format-check": "prettier --check '**/**.ts'",
-    "lint": "eslint src/**/**.ts",
     "test": "jest",
-    "all": "yarn build && yarn format && yarn lint && yarn test"
+    "all": "yarn build && yarn format && yarn test"
   },
-  "main": "lib/main.js",
+  "main": "src/main.ts",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
@@ -33,18 +32,24 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.0",
-    "@typescript-eslint/parser": "^4.33.0",
     "@vercel/ncc": "^0.38.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-github": "^4.3.2",
-    "eslint-plugin-jest": "^25.3.2",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^27.2.5",
+    "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
-    "prettier": "2.5.1",
+    "prettier": "^3.5.3",
     "release-it": "^15.11.0",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.4.4"
+    "ts-jest": "^29.3.1",
+    "typescript": "^5.8.2"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "prettier": {
+    "printWidth": 120,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": true,
+    "quoteProps": "preserve",
+    "trailingComma": "all",
+    "bracketSpacing": true,
+    "arrowParens": "always"
+  }
 }
