--- a/.github/workflows/test-dispatch.yaml
+++ b/.github/workflows/test-dispatch.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./
         with:
-          gh_token: ${{ secrets.GITHUB_TOKEN }}
+          gh_token: ${{ secrets.BOT_GH_TOKEN }}
           circleci_token: ${{ secrets.CIRCLECI_TOKEN }}
           product: 'uikit'
           platform: 'rn'
