--- a/action.yml
+++ b/action.yml
@@ -23,6 +23,7 @@ inputs:
   test:
     required: false
     description: 'Input actions run on testing environment'
+    default: false
   changelog_file:
     required: false
     description: 'Input changelog file name. (e.g. CHANGELOG_KTX_DRAFT.md) Default is CHANGELOG_DRAFT.md.'
